<resources>
    <string name="a_to_z">A to Z</string>
    <string name="a_z">A → Z</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_copyright">©%s by Lark Video.</string>
    <string name="about_new_version_tips">There is a new version</string>
    <string name="about_newest_version_tips">This is the newest version</string>
    <string name="access">Access</string>
    <string name="ad_issues_title">Select what Ad issues you met:</string>
    <string name="add">Add</string>
    <string name="add_and_play_hidden_song">The song has been hidden, add to song list and play?</string>
    <string name="add_new">Add new</string>
    <string name="add_songs">Add songs</string>
    <string name="add_to">Add to</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="add_to_your_playlist">Add to your list</string>
    <string name="add_videos">Add videos</string>
    <string name="added_to_next">Added to next</string>
    <string name="added_to_playlist">Added to \"%s\"</string>
    <string name="added_to_queue">Added to playing queue</string>
    <string name="added_to_your_playlist">Added to your list</string>
    <string name="album">Album</string>
    <string name="albums">Albums</string>
    <string name="albums_sort">Albums sort</string>
    <string name="all_questions_tips">"Didn't solve your problem?"</string>
    <string name="all_videos">Videos</string>
    <string name="allow">Allow</string>
    <string name="allow_all">Allow all</string>
    <string name="allow_all_permission">Allow all permission</string>
    <string name="allow_all_to_play_more_videos">You only allow Lark Video to limited access. Allow all to play more videos.</string>
    <string name="allow_all_to_play_new_videos">You only allow Lark Video to limited access. Allow all to play new videos.</string>
    <string name="allow_all_to_play_videos">Allow all to play videos</string>
    <string name="allow_permission_to_videos">Allow permission to load Videos</string>
    <string name="allow_single_folder">Allow a folder</string>
    <string name="allow_storage_to_play">Grant access to media files to play your own videos or music.</string>
    <string name="allow_the_permission_to_play">Allow the permission to play</string>
    <string name="allow_to_play_video">Allow to play video</string>
    <string name="allow_to_play_videos">Allow to play videos</string>
    <string name="always_allow_all">Always allow all</string>
    <string name="android_startup">android.startup</string>
    <string name="android_startup_provider_config">android.startup.provider.config</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Lark Video</string>
    <string name="app_name_upper_case">LARK VIDEO</string>
    <string name="app_search_no_input">Enter search terms</string>
    <string name="app_update_start_download_tips">Starting download, it will be installed when you return to the app</string>
    <string name="app_version">App version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applied">Applied</string>
    <string name="apply">Apply</string>
    <string name="arrange">Arrange</string>
    <string name="artist">Artist</string>
    <string name="artist_args">Artist: %s</string>
    <string name="artists">Artists</string>
    <string name="artists_sort">Artists sort</string>
    <string name="audio_and_video">Audio and Videos</string>
    <string name="audio_filter">Audio filter</string>
    <string name="audio_folder_hide_success">Folder hidden, you can recover it from Hide settings</string>
    <string name="audio_track">Audio track</string>
    <string name="audio_track_exception_desc">Fail to start system playback instance, please reboot the app or phone to solve</string>
    <string name="audio_track_exception_title">Insufficient system resources</string>
    <string name="authorize_all_videos">Allow all videos</string>
    <string name="authorize_all_videos_desc">Go to \"Settings\" and enable the \"Allow All Videos\" option to play all videos</string>
    <string name="authorize_already_tips">You have authorized this folder before</string>
    <string name="authorize_folder_desc">Add more videos from the folder</string>
    <string name="authorize_folder_not_found">%s Audio not found</string>
    <string name="authorize_folder_not_found_subtitle">Click to add %s Audio to list</string>
    <string name="authorize_more_folders">Authorize more folders</string>
    <string name="authorize_new_folder">Click to authorize new folders</string>
    <string name="authorize_uri_scan_no_songs">No songs were scanned from %s</string>
    <string name="authorize_uri_scan_no_videos">No videos were scanned from %s</string>
    <string name="authorize_whatsapp_fold_name">WhatsApp</string>
    <string name="auto_floating_play">Auto floating play</string>
    <string name="auto_rotate">Auto rotate</string>
    <string name="auto_skip_without_wifi">Skip online music automatically when you are not connected to Wi-Fi</string>
    <string name="back_to_video">Back to video</string>
    <string name="block_add_queue_during_video">Cannot add during video playback.</string>
    <string name="both_removed_because_file_not_exist">%1$s and %2$s removed from list because file not exist.</string>
    <string name="both_removed_because_sdcard_unmounted">SD card not found, %1$s and %2$s removed from list.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brightness">Brightness</string>
    <string name="broken_file_can_not_play">"File can't play"</string>
    <string name="btn_continue">Continue</string>
    <string name="build_host">gitlab-runner@04e7be6093e7</string>
    <string name="build_revision">6112f4a</string>
    <string name="build_time">26-03-01</string>
    <string name="by">By %s</string>
    <string name="by_you">By you</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="carsh_canvers">视图绘制出现异常</string>
    <string name="change">Change</string>
    <string name="change_image">Change image</string>
    <string name="change_log_message">Lark Video %s latest news</string>
    <string name="change_mode_title">Light/Dark mode</string>
    <string name="change_password">Change password</string>
    <string name="change_password_hint">Change your password</string>
    <string name="change_song">Switch songs</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="clear">Clear</string>
    <string name="create">Create</string>
    <string name="enter_playlist_name">Enter the name</string>
    <string name="feedback_article_comment_1">"It doesn't have the information I need."</string>
    <string name="feedback_article_comment_2">The information was hard to follow or confusing.</string>
    <string name="feedback_article_comment_3">The solution did not work as described.</string>
    <string name="feedback_article_comment_4">There is a broken link, missing image, or typo.</string>
    <string name="feedback_article_comment_title">How could it be better?</string>
    <string name="feedback_article_helpful">Was this article helpful?</string>
    <string name="feedback_detail_hint">Please input</string>
    <string name="feedback_detail_subtitle">Please describe your problem using at least 10 characters so that we can better troubleshoot it</string>
    <string name="feedback_detail_title">Details</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_email_hint">Please input</string>
    <string name="feedback_file_select_title">Screenshots for troubleshooting (Optional)</string>
    <string name="feedback_issue_detail">Information</string>
    <string name="feedback_select_your_issue">Select the issue</string>
    <string name="feedback_success">Thanks for your feedback:)</string>
    <string name="files_not_found">Files not found?</string>
    <string name="forgot_password_symbol">Forgot password?</string>
    <string name="manage_your_scan_list">Manage your scan list:</string>
    <string name="music">Music</string>
    <string name="new_playlist">New playlist</string>
    <string name="next_time">Next time</string>
    <string name="no">No</string>
    <string name="or">Or</string>
    <string name="reset">Reset</string>
    <string name="speed_0_5">0.5x</string>
    <string name="speed_1_0">1.0x</string>
    <string name="speed_1_5">1.5x</string>
    <string name="speed_2_0">2.0x</string>
    <string name="submit">Submit</string>
    <string name="use">Use</string>
    <string name="use_fingerprint_tip">"Password confirmed! 
Use fingerprint to quick unlock?"</string>
    <string name="verify_email_tip">Reset your password via security email</string>
    <string name="videos">Videos</string>
    <string name="yes">Yes</string>
</resources>