<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@id/contentBg" android:background="?bg_main" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textAppearance="@style/Subtitle1" android:textColor="?content_main" android:gravity="start|center" android:id="@id/title" android:paddingTop="8.0dp" android:paddingBottom="8.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="16.0dp" android:paddingEnd="16.0dp" />
        <LinearLayout android:gravity="start|center" android:orientation="vertical" android:id="@id/issues_container" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/Overline" android:textColor="?content_soft" android:gravity="start|center" android:id="@id/issues_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/feedback_select_your_issue" android:paddingStart="16.0dp" android:paddingEnd="16.0dp" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/issues" android:paddingTop="12.0dp" android:paddingBottom="12.0dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="16.0dp" android:paddingEnd="16.0dp" />
        </LinearLayout>
        <LinearLayout android:gravity="start|center" android:orientation="vertical" android:id="@id/issue_items_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/Overline" android:textColor="?content_soft" android:gravity="start|center" android:id="@id/issue_items_title" android:layout_width="match_parent" android:layout_height="36.0dp" android:text="@string/feedback_issue_detail" android:paddingStart="16.0dp" android:paddingEnd="16.0dp" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/issue_items" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView android:textAppearance="@style/Overline" android:textColor="?content_soft" android:gravity="start|center" android:id="@id/detail_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginTop="16.0dp" android:layout_marginBottom="6.0dp" android:text="@string/feedback_detail_title" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" />
        <TextView android:textAppearance="@style/Subtitle2" android:textColor="?content_soft" android:gravity="start|center" android:id="@id/detail_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dp" android:text="@string/feedback_detail_subtitle" android:paddingStart="16.0dp" android:paddingEnd="16.0dp" />
        <EditText android:textSize="14.0sp" android:textColor="?content_main" android:textColorHint="?content_soft" android:gravity="start|top" android:id="@id/comment" android:padding="8.0dp" android:layout_width="match_parent" android:layout_height="100.0dp" android:layout_marginBottom="15.0dp" android:hint="@string/feedback_detail_hint" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" />
        <TextView android:textAppearance="@style/Overline" android:textColor="?content_soft" android:id="@id/file_select_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/feedback_file_select_title" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" />
        <androidx.recyclerview.widget.RecyclerView android:id="@id/file_select_items" android:paddingBottom="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" />
        <TextView android:textAppearance="@style/Overline" android:textColor="?content_soft" android:gravity="start|center" android:id="@id/email_title" android:layout_width="match_parent" android:layout_height="36.0dp" android:text="@string/feedback_email" android:paddingStart="16.0dp" android:paddingEnd="16.0dp" />
        <TextView android:textAppearance="@style/Subtitle2" android:textColor="?content_soft" android:gravity="start|center" android:id="@id/email_subtitle" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dp" android:paddingStart="16.0dp" android:paddingEnd="16.0dp" />
        <EditText android:textSize="16.0sp" android:textColor="?content_main" android:textColorHint="?content_soft" android:gravity="start|center" android:layout_gravity="start|center" android:id="@id/email" android:paddingTop="12.0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/feedback_email_hint" android:maxLines="1" android:singleLine="true" android:layout_weight="1.0" android:paddingStart="8.0dp" android:paddingEnd="8.0dp" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" />
        <FrameLayout android:layout_width="match_parent" android:layout_height="72.0dp">
            <Button android:textColor="@color/night_content_main" android:gravity="center" android:layout_gravity="center" android:id="@id/submit" android:background="?brand_main" android:layout_width="match_parent" android:layout_height="48.0dp" android:text="@string/submit" android:textAllCaps="false" />
        </FrameLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
