<?xml version="1.0" encoding="utf-8"?>
<com.dywx.larkplayer.module.base.widget.LPLinearLayout android:orientation="horizontal" android:id="@id/root" android:tag="layout/option_speed_list_0" android:paddingLeft="16.0dp" android:paddingTop="20.0dp" android:paddingRight="16.0dp" android:paddingBottom="24.0dp" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.dywx.larkplayer.module.base.widget.LPButton android:textSize="16.0sp" android:textColor="?content_soft" android:id="@id/btn_speed_1" android:layout_width="0.0dp" android:layout_height="70.0dp" android:layout_marginLeft="8.0dp" android:layout_marginRight="8.0dp" android:text="@string/speed_0_5" android:layout_weight="1.0" android:paddingStart="0.0dp" android:paddingEnd="0.0dp" app:buttonState="soft" app:strokeWidth="1.0px" style="@style/BtnBig" />
    <com.dywx.larkplayer.module.base.widget.LPButton android:textSize="16.0sp" android:textColor="?content_soft" android:id="@id/btn_speed_2" android:layout_width="0.0dp" android:layout_height="70.0dp" android:layout_marginLeft="8.0dp" android:layout_marginRight="8.0dp" android:text="@string/speed_1_0" android:layout_weight="1.0" android:paddingStart="0.0dp" android:paddingEnd="0.0dp" app:buttonState="soft" app:strokeWidth="1.0px" style="@style/BtnBig" />
    <com.dywx.larkplayer.module.base.widget.LPButton android:textSize="16.0sp" android:textColor="?content_soft" android:id="@id/btn_speed_3" android:layout_width="0.0dp" android:layout_height="70.0dp" android:layout_marginLeft="8.0dp" android:layout_marginRight="8.0dp" android:text="@string/speed_1_5" android:layout_weight="1.0" android:paddingStart="0.0dp" android:paddingEnd="0.0dp" app:buttonState="soft" app:strokeWidth="1.0px" style="@style/BtnBig" />
    <com.dywx.larkplayer.module.base.widget.LPButton android:textSize="16.0sp" android:textColor="?content_soft" android:id="@id/btn_speed_4" android:layout_width="0.0dp" android:layout_height="70.0dp" android:layout_marginLeft="8.0dp" android:layout_marginRight="8.0dp" android:text="@string/speed_2_0" android:layout_weight="1.0" android:paddingStart="0.0dp" android:paddingEnd="0.0dp" app:buttonState="soft" app:strokeWidth="1.0px" style="@style/BtnBig" />
</com.dywx.larkplayer.module.base.widget.LPLinearLayout>
