<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:paddingTop="8.0dp" android:paddingBottom="32.0dp" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.dywx.larkplayer.module.base.widget.LPTextView android:textColor="?content_soft" android:id="@id/tv_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:text="@string/files_not_found" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Caption_LP" />
    <com.dywx.larkplayer.module.base.widget.LPLinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title">
        <com.dywx.larkplayer.module.base.widget.LPTextView android:textColor="?content_soft" android:layout_gravity="center" android:id="@id/tv_manage_file" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:text="@string/manage_your_scan_list" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" style="@style/Caption_LP" />
        <com.dywx.larkplayer.module.base.widget.LPTextView android:textColor="?brand_main" android:layout_gravity="center" android:id="@id/audio_scan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:text="@string/music" android:paddingStart="5.0dp" android:paddingEnd="5.0dp" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toEndOf="@id/tv_manage_file" app:layout_constraintTop_toBottomOf="@id/tv_title" style="@style/Caption_LP" />
        <com.dywx.larkplayer.module.base.widget.LPTextView android:textColor="?content_soft" android:layout_gravity="center" android:id="@id/or" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:text="@string/or" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toEndOf="@id/audio_scan" app:layout_constraintTop_toBottomOf="@id/tv_title" style="@style/Caption_LP" />
        <com.dywx.larkplayer.module.base.widget.LPTextView android:textColor="?brand_main" android:layout_gravity="center" android:id="@id/video_scan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:text="@string/videos" android:paddingStart="5.0dp" android:paddingEnd="5.0dp" app:layout_constraintBottom_toBottomOf="@id/tv_manage_file" app:layout_constraintStart_toEndOf="@id/or" style="@style/Caption_LP" />
    </com.dywx.larkplayer.module.base.widget.LPLinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
