<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/night_bg_overlay" android:paddingTop="@dimen/spacing_medium" android:paddingBottom="@dimen/spacing_medium" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="96.0dp" android:layout_height="96.0dp" android:src="@drawable/ic_forget_password" />
    <TextView android:textSize="16.0sp" android:textColor="@color/night_content_main" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/forgot_password_symbol" />
    <TextView android:textSize="14.0sp" android:textColor="@color/night_content_soft" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/verify_email_tip" />
    <com.google.android.material.button.MaterialButton android:textColor="@color/night_bg_main" android:gravity="center" android:id="@id/btn_reset" android:background="@null" android:layout_width="match_parent" android:layout_height="38.0dp" android:layout_marginTop="24.0dp" android:text="@string/reset" android:layout_marginStart="56.0dp" android:layout_marginEnd="56.0dp" app:backgroundTint="@color/night_content_main" app:cornerRadius="24.0dp" />
</LinearLayout>
