<?xml version="1.0" encoding="utf-8"?>
<com.dywx.larkplayer.module.base.widget.LPConstraintLayout android:paddingTop="@dimen/spacing_medium" android:paddingBottom="@dimen/spacing_medium" android:layout_width="match_parent" android:layout_height="wrap_content" android:minWidth="320.0dp" app:need_delegate="true" app:rv_backgroundColor="?bg_overlay" app:rv_cornerRadius="@dimen/spacing_small"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.dywx.larkplayer.module.base.widget.LPTextView android:textColor="?content_main" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_playlist" android:paddingStart="@dimen/spacing_medium" android:paddingEnd="@dimen/spacing_large" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Title_LP" />
    <com.google.android.material.textfield.TextInputLayout android:textColorHint="?content_weak" android:id="@id/dialog_playlist_name" android:paddingLeft="@dimen/spacing_medium" android:paddingTop="@dimen/spacing_small" android:paddingRight="@dimen/spacing_medium" android:paddingBottom="@dimen/spacing_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dp" app:counterEnabled="true" app:counterMaxLength="200" app:counterOverflowTextAppearance="@style/InputCounterOverflowText" app:counterOverflowTextColor="?warn_content" app:counterTextAppearance="@style/InputCounterText" app:counterTextColor="?content_weak" app:cursorColor="?positive_content" app:endIconContentDescription="@string/clear" app:endIconDrawable="@drawable/ic_close_oval_normal" app:endIconMode="none" app:endIconTintMode="src_atop" app:hintAnimationEnabled="false" app:hintEnabled="false" app:hintTextColor="?positive_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title">
        <com.google.android.material.textfield.TextInputEditText android:theme="@style/BaseEditText" android:textColor="?content_main" android:textColorHint="?content_weak" android:id="@id/edittext_playlist_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/enter_playlist_name" android:inputType="text" android:imeOptions="actionDone" style="@style/Body" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.dywx.larkplayer.module.base.widget.LPTextView android:textColor="@color/main_text_color" android:gravity="center" android:id="@id/btn_create" android:layout_width="wrap_content" android:layout_marginTop="@dimen/spacing_medium" android:text="@string/create" android:layout_marginEnd="@dimen/spacing_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/dialog_playlist_name" style="@style/BtnText" />
    <com.dywx.larkplayer.module.base.widget.LPButton android:gravity="center" android:id="@id/btn_cancel" android:layout_width="wrap_content" android:text="@string/cancel" android:layout_marginEnd="@dimen/spacing_medium" app:layout_constraintBottom_toBottomOf="@id/btn_create" app:layout_constraintEnd_toStartOf="@id/btn_create" app:layout_constraintTop_toTopOf="@id/btn_create" style="@style/BtnText" />
</com.dywx.larkplayer.module.base.widget.LPConstraintLayout>
