<?xml version="1.0" encoding="utf-8"?>
<com.dywx.larkplayer.module.base.widget.LPLinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingTop="@dimen/spacing_medium" android:paddingBottom="@dimen/spacing_medium" android:layout_width="match_parent" android:layout_height="wrap_content" app:fixedThemeMode="night" app:need_delegate="true" app:rv_backgroundColor="@color/night_bg_overlay" app:rv_cornerRadius="@dimen/spacing_small"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="96.0dp" android:layout_height="96.0dp" android:src="@drawable/pic_fingerprint" />
    <TextView android:textSize="16.0sp" android:textColor="@color/night_content_main" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/use_fingerprint_tip" />
    <com.google.android.material.button.MaterialButton android:textColor="@color/night_bg_main" android:gravity="center" android:id="@id/btn_use" android:background="@null" android:layout_width="match_parent" android:layout_height="40.0dp" android:layout_marginTop="24.0dp" android:text="@string/use" android:insetTop="0.0dp" android:insetBottom="0.0dp" android:layout_marginStart="56.0dp" android:layout_marginEnd="56.0dp" app:backgroundTint="@color/night_content_main" app:cornerRadius="24.0dp" app:rippleColor="@color/night_black_opacity_20" />
    <com.google.android.material.button.MaterialButton android:textColor="@color/night_content_main" android:gravity="center" android:id="@id/btn_next_time" android:background="@null" android:layout_width="match_parent" android:layout_height="40.0dp" android:layout_marginTop="16.0dp" android:text="@string/next_time" android:insetTop="0.0dp" android:insetBottom="0.0dp" android:layout_marginStart="56.0dp" android:layout_marginEnd="56.0dp" app:backgroundTint="@color/transparent" app:cornerRadius="@dimen/spacing_large" app:strokeColor="@color/night_bg_overlay_top" app:strokeWidth="0.5dp" />
</com.dywx.larkplayer.module.base.widget.LPLinearLayout>
